--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Chetan Arora",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"inquirer": "^9.1.5"
+	}
 }
